# Synthetic-Shape-Detection

./: .gitignore  01_data_creation.ipynb  02_training.ipynb  03_testing.ipynb  LICENSE  README.md  REPORT.md  evaluate.py  links.txt  notebook.ipynb  pyproject.toml  train.py
figures/: 02-training.ipynb
src/: dataset.py  experiments.py  setup_coco.py
